--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "expo-ui-components",
-  "version": "1.0.0",
-  "description": "provides ui components",
+  "version": "1.0.2",
+  "description": "UI components for React Native projects",
+  "author": "haxcod",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "npx rollup -c"
+  },
   "keywords": [
     "npm",
     "ui-components",
@@ -15,13 +22,6 @@
     "type": "git",
     "url": "git+https://github.com/haxcod/expo-ui-components.git"
   },
-  "license": "ISC",
-  "author": "haxcod",
-  "type": "module",
-  "main": "index.ts",
-  "scripts": {
-    "build": "npx rollup -c"
-  },
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
     "@rollup/plugin-babel": "^6.0.4",
@@ -30,5 +30,6 @@
     "react": "^18.3.1",
     "react-native": "^0.76.5",
     "rollup": "^4.29.1"
-  }
+  },
+    "license": "ISC"
 }
