--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-ui-components",
-  "version": "1.0.7",
+  "version": "1.1.8",
   "description": "UI components for React Native projects",
   "author": "haxcod",
   "type": "module",
@@ -36,6 +36,7 @@
   "license": "ISC",
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "expo-linear-gradient": "^14.0.1"
+    "expo-linear-gradient": "^14.0.1",
+    "expo-ui-components": "^1.1.8"
   }
 }
