--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "expo-ui-components",
-  "version": "1.2.0",
+  "version": "1.2.2",
   "description": "UI components for React Native projects",
   "author": "haxcod",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": ["dist", "README.md"],
   "scripts": {
     "build": "npx rollup -c"
   },
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
     "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/react": "^18.3.18",
     "react": "^18.3.1",
